feature/RNT-1 - ui changes

--- a/rental-ui/rental-ui/src/app/component/rental/user/add-edit-address/add-edit-address.component.css
+++ b/rental-ui/rental-ui/src/app/component/rental/user/add-edit-address/add-edit-address.component.css
@@ -126,3 +126,9 @@ mat-header-row {
   overflow: hidden;
   vertical-align: middle;
 }
+.mat-mdc-checkbox label {
+  padding-left: 25px !important;
+}
+.fullWidth{
+  display:flex;
+}
