feature/RNT-1 - UI changes checkbox to copy address

--- a/rental-ui/rental-ui/src/app/component/rental/user/add-edit-address/add-edit-address.component.html
+++ b/rental-ui/rental-ui/src/app/component/rental/user/add-edit-address/add-edit-address.component.html
@@ -4,7 +4,7 @@
   <h4 class="text-[20px] font-bold text-black mb-3">{{address.addressType | titlecase }} Address</h4>
   @if(address.addressType === 'TEMPORARY'){
     <div class="inventual-checkbox-field-style mb-2 fullWidth">
-      <mat-checkbox class="example-margin float-end">Same as Permanent</mat-checkbox>
+      <mat-checkbox class="example-margin float-end" [(ngModel)]="isChecked" (change)="checkboxcChanged()" [disabled]="isDisabled">Same as Permanent</mat-checkbox>
     </div>
   }
   <div class="grid grid-cols-12 gap-x-7 sm:gap-x-0">
