--- a/rental-ui/rental-ui/src/app/component/rental/product/product.component.html
+++ b/rental-ui/rental-ui/src/app/component/rental/product/product.component.html
@@ -1,25 +1,90 @@
 <div class="inventual-managesale-area bg-white p-7 custom-shadow rounded-8 mb-5">
     <h4 class="text-[20px] font-bold text-black mb-9">Product List</h4>
-    <div class="inventual-material-btn mb-7">
-        <!-- <button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0" >
-            <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span>
-            <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add_circle_outline</mat-icon><span class="mdc-button__label"> Add Product</span>
-            <span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span><span class="mat-ripple mat-mdc-button-ripple"></span>
-        </button> -->
-        <button mat-button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0">
-            <mat-icon>add_circle_outline</mat-icon>
-            Add Product
-        </button>
-    </div>
     <div class="inventual-table-header-search-area">
-        <div class="grid grid-cols-12 gap-x-5 mb-7 pb-0.5">
+        <div class="grid grid-cols-12 gap-x-5 mb-1 pb-0.5">
             <div class="col-span-5 md:col-span-6 sm:col-span-12">
                 <div class="inventual-table-header-search relative sm:mb-4">
                     <input type="text" placeholder="Search List" />
                     <span><mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">search</mat-icon></span>
                 </div>
+            </div>
+            <div class="col-span-7 md:col-span-6 sm:col-span-12">
+            <div class="inventual-material-btn mb-5 pull-right">
+                <button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0" (click)="createProduct()">
+                    <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span>
+                    <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add_circle_outline</mat-icon><span class="mdc-button__label"> Add Product</span>
+                    <span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span><span class="mat-ripple mat-mdc-button-ripple"></span>
+                </button>
+            </div>
+            </div>
         </div>
     </div>
+    
+
+    <div class="table-container mat-elevation-z8">
+
+        <mat-table [dataSource]="dataSource" matSort>
+
+            <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="image">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Image </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.image}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="code">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Code </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.code }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="category">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Category </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.category }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="subCategory">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Sub-Category </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.subCategory }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="brand">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Brand </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.brand }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="unit">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Unit </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.unit  }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="variant">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Variant </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.variant  }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="stock">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Stock </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.stock }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="price">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.price }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="action">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                    <mat-icon >edit</mat-icon>
+                    <mat-icon style="color: red;" >delete</mat-icon>
+                </mat-cell>
+            </ng-container>
+
+
+            <mat-header-row class="rnt-headerstack" *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;">
+            </mat-row>
+        </mat-table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" hidePageSize="true"></mat-paginator>
     </div>
 </div>
             
